cmake_minimum_required(VERSION 3.6)
project(nowcoder_windows)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp)


add_executable(nowcoder_windows ${SOURCE_FILES})

#   freopen("../../set/data/a.in", "r", stdin); //输入重定向，输入数据将从in.txt文件中读取
add_subdirectory(vector)
add_subdirectory(array)
add_subdirectory(set)
add_subdirectory(mutilset)
add_subdirectory(getlength)
add_subdirectory(count_char) 
add_subdirectory(smartpoint) 
add_subdirectory(singlemode)
add_subdirectory(thread)
add_subdirectory(mutex) 
add_subdirectory(stringMatch) 
add_subdirectory(sign)
add_subdirectory(prie)
add_subdirectory(bianhao)
add_subdirectory(geohash)
add_subdirectory(streetlight) 
add_subdirectory(jump2)
add_subdirectory(word_ladder)
add_subdirectory(restore_ip)
add_subdirectory(sort)
add_subdirectory(newtest)
add_subdirectory(newtest2)
add_subdirectory(toutiao)
add_subdirectory(net)
add_subdirectory(net_2)
add_subdirectory(net_3)
add_subdirectory(net_4)
add_subdirectory(net_5)
add_subdirectory(net_6)
add_subdirectory(net_7)
add_subdirectory(net_8)
add_subdirectory(net_10)
add_subdirectory(net_9)
add_subdirectory(net_11)
add_subdirectory(net_12) 
add_subdirectory(net_13) 
add_subdirectory(net_14)
add_subdirectory(net_15)
add_subdirectory(net_16)
add_subdirectory(net_17) 
add_subdirectory(net_18) 
add_subdirectory(net_19)
add_subdirectory(test_new)
add_subdirectory(jindong)
add_subdirectory(huawei_one)
add_subdirectory(sudo)
